--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "discord.js": "^14.11.0",
     "dotenv": "^16.1.4"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "eslint": "^8.42.0"
+  }
 }
