--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
   "name": "potatobot",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Typescript bot for potato",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "reload": "node index.js reload"
+    "test2": "mocha -r ts-node/register tests/**/*.test.ts",
+    "test": "SET TS_NODE_PROJECT=tsconfig.mocha.json&& SET NODE_OPTIONS=--no-warnings --experimental-vm-modules --experimental-json-modules --loader ts-node/esm && mocha -r ts-node/register 'tests/**/*.ts'",
+    "start": "npx ts-node src/index.ts",
+    "reload": "npx ts-node src/index.ts reload"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.7",
     "discord.js": "^14.11.0",
-    "dotenv": "^16.1.4"
+    "dotenv": "^16.1.4",
+    "mongodb": "^5.7.0",
+    "save-dev": "^0.0.1-security"
   },
   "type": "module",
   "devDependencies": {
-    "eslint": "^8.42.0"
+    "@types/chai": "^4.3.5",
+    "@types/jest": "^29.5.3",
+    "@types/mocha": "^10.0.1",
+    "discord.js-mock-interactions": "^0.1.9",
+    "eslint": "^8.42.0",
+    "mocha": "^10.2.0",
+    "ts-jest-resolver": "^2.0.1",
+    "ts-loader": "^9.4.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
